Fixed wrong spacing between cards (don't reformat code!!!); added new video

--- a/src/main/resources/public/css/board.css
+++ b/src/main/resources/public/css/board.css
@@ -19,8 +19,8 @@ body {
 
 #layer-video {
     z-index: 1;
-    display: none;
-    filter: opacity(50%);
+    /*display: none;*/
+    /*filter: opacity(50%);*/
 }
 
 #layer-cards {
